# multi-agent-design-review

./: .gitignore  README.md  package.json  pyproject.toml
.llm-wiki/requirements/: runner-e2e-control.md  workbench-ux-v2.md
backend/app/: api.py  main.py  models.py
backend/app/graph/: edges.py  nodes.py  state.py
backend/app/runners/: antigravity.py  base.py  command.py  file.py  manual.py  mock.py
backend/app/services/: agent_config_service.py  artifact_service.py  clarification_service.py  event_service.py  file_service.py  finalize_service.py  flow_control_service.py  flow_verification_service.py  graph_service.py  human_control_service.py  human_input_service.py  job_service.py  prompt_service.py  run_service.py  (+9 more)
backend/tests/: test_antigravity_runner.py  test_api_runs.py  test_api_workflow.py  test_clarification_service.py  test_finalize_service.py  test_flow_control_service.py  test_flow_verification_service.py  test_graph_checkpoint.py  test_graph_driven_e2e.py  test_graph_main_path.py  test_graph_stage_flow.py  test_graph_workflow.py  test_health.py  test_human_control_api.py  test_human_input_api.py  test_mixed_runner_e2e.py  test_mvp_flow.py  test_prompt_service.py  test_run_service.py  test_runner_handoff_service.py  test_runner_registry_service.py  test_runner_service.py  test_runner_smoke_job_service.py  test_runner_smoke_service.py  test_state_full_flow.py  test_state_service.py  test_workflow_import.py
docs/: runner-cli-feasibility.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
(+48 files in other folders)
